--- a/PFD_Assignment/Views/Home/AdminMain.cshtml
+++ b/PFD_Assignment/Views/Home/AdminMain.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = "View Announcements";
 }
 
-<h4 class="PageTitle">View Announcements</h4>
+<h4 class="PageTitle" style="padding-left:20px;">View Announcements</h4>
 
 <partial name="~/Views/Admin/_ViewAnnouncements.cshtml" model="@Model" />
 
