--- a/PFD_Assignment/Views/Guide/Create.cshtml
+++ b/PFD_Assignment/Views/Guide/Create.cshtml
@@ -46,14 +46,15 @@
         </div>
 
         <div class="row me-0">
-            <div class="col-sm-6 offset-sm-6">
+            <div class="col-sm-6 offset-sm-6 text-center mx-auto">
                 <div id="apiKeyContainer" data-api-key="@ViewBag.ApiKey">
                     <button type="button" class="btn btn-success" id="validateButton">Validate</button>
                     <input type="submit" value="Create" class="btn btn-primary" id="submitButton" disabled />
-                    <button asp-action="Index" class="btn btn-danger">Return back</button>
+                    <a asp-action="Index" class="btn btn-danger" style="padding:5px">Return back</a>
                 </div>
             </div>
         </div>
+
     </fieldset>
 </form>
 
