--- a/PFD_Assignment/Views/Shared/_Mainpage.cshtml
+++ b/PFD_Assignment/Views/Shared/_Mainpage.cshtml
@@ -49,14 +49,14 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <!-- A link for logging out user -->
-                    <a class="nav-link" href="~/Home/Profile">Profile</a>
+                    <a class="nav-link" style="padding-top:10px;padding-top:20px;" href="~/Home/Profile">Profile</a>
                 </li>
                 <li class="nav-item">
                     <!-- A link for logging out user -->
-                    <a class="nav-link" href="~/Home/LogOut">Log Out</a>
+                    <a class="nav-link" style="padding-top:10px;padding-top:20px;" href="~/Home/LogOut">Log Out</a>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item" style="padding-top:16px">
                     <div class="fontbuttongrp">
                         <button class="fontButton" onclick="changeFontSize(1.05)" >+A</button>
                         <button class="fontButton" onclick="changeFontSize(0.95)">-A</button>
@@ -121,6 +121,36 @@
     }
 
     #google_translate_element {
-        margin-left: 10px; /* Creates space between the font buttons and translate element */
+        /* margin-left: 10px; */
+        width: 100%;
+        height:auto;
+        border: 1px solid #ccc; /* Add a border */
+        padding: 10px; /* Add some padding */
+        background-color: #f5f5f5; /* Set a background color */
+        border-radius: 5px; /* Add rounded corners */
+
     }
+
+    /* Style the language dropdown button */
+    .goog-te-combo {
+        background-color: #fff; /* Set background color */
+        border: 1px solid #ccc; /* Add a border */
+        padding: 5px; /* Add padding */
+    }
+
+    /* Style the language dropdown list */
+    .goog-te-menu-value {
+        padding: 5px;
+    }
+
+    /* Style the font size buttons */
+    .goog-te-menu2-item {
+        font-size: 14px; /* Set the font size */
+    }
+
+        /* Style the hover effect on font size buttons */
+        .goog-te-menu2-item:hover {
+            background-color: black; /* Set hover background color */
+        }
+
 </style>
