return button size lol

--- a/PFD_Assignment/Views/Guide/Create.cshtml
+++ b/PFD_Assignment/Views/Guide/Create.cshtml
@@ -58,7 +58,7 @@
                 <div id="apiKeyContainer" data-api-key="@ViewBag.ApiKey">
                     <button type="button" class="btn btn-success" id="validateButton">Validate</button>
                     <input type="submit" value="Create" class="btn btn-primary" id="submitButton" disabled />
-                    <a asp-action="Index" class="btn btn-danger" style="padding:5px">Return back</a>
+                    <button asp-action="Index" class="btn btn-danger" style="padding:5px">Return back</button>
                 </div>
             </div>
         </div>
