--- a/PFD_Assignment/Views/Admin/CreateAnnounce.cshtml
+++ b/PFD_Assignment/Views/Admin/CreateAnnounce.cshtml
@@ -24,9 +24,9 @@
 
         <div class="row mb-3">
             <div class="col-sm-5 offset-sm-5">
-                <a href="@Url.Action("AdminMain", "Home")" class="btn btn-danger">
+                <button href="@Url.Action("AdminMain", "Home")" class="btn btn-danger">
                     Return back
-                </a>
+                </button>
                 <input type="submit" value="Create" class="btn btn-primary" id="submitButton" />
                 
             </div>
