--- a/PFD_Assignment/Views/Shared/_AdminMenu.cshtml
+++ b/PFD_Assignment/Views/Shared/_AdminMenu.cshtml
@@ -42,11 +42,11 @@
             <!-- Links aligned to the right,
                  ms-auto: margin-start, i.e., left margin, auto-adjusted -->
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
+                <li class="nav-item" style="padding-top:17px">
                     <!-- A link for logging out user -->
                     <a class="nav-link" href="~/Home/LogOut">Log Out</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" style="padding-top:17px">
                     <div class="fontbuttongrp">
                         <button class="fontButton" onclick="changeFontSize(1.05)">+A</button>
                         <button class="fontButton" onclick="changeFontSize(0.95)">-A</button>
