--- a/PFD_Assignment/Views/Admin/PinGuide.cshtml
+++ b/PFD_Assignment/Views/Admin/PinGuide.cshtml
@@ -19,7 +19,7 @@
                 <thead class="table-dark">
                 <tr>
                     <th>Title</th>
-                    <th>Content</th>
+                    <th>Description</th>
                     <th>Likes</th>
                     <th>Dislikes</th>
                     <th>Actions</th>
@@ -30,12 +30,12 @@
                 {
                     <tr>
                         <td>@featuredPost.PostTitle</td>
-                        <td>@featuredPost.PostContent</td>
+                        <td>@featuredPost.PostDesc</td>
                         <td>@featuredPost.Upvote</td>
                         <td>@featuredPost.Downvote</td>
                         <td>
                             <a asp-action="GuideDetails" asp-controller="Guide" asp-route-id="@featuredPost.PostID">Details</a> |
-                            <a href="#" data-toggle="modal" data-target="#deletefeaturedConfirmationModal" data-featured-post-id="@featuredPost.FeaturedPostID" class="deleteButton">Delete</a>
+                            <a href="#" data-toggle="modal" data-target="#deletefeaturedConfirmationModal" data-featured-post-id="@featuredPost.FeaturedPostID" class="deleteButton">Remove</a>
                         </td>
                     </tr>
                 }
@@ -55,7 +55,7 @@
                 <thead class="table-dark">
                 <tr>
                     <th>Title</th>
-                    <th>Content</th>
+                        <th>Description</th>
                     <th>Likes</th>
                     <th>Dislikes</th>
                     <th>Actions</th>
@@ -66,7 +66,7 @@
                 {
                     <tr>
                         <td>@post.PostTitle</td>
-                        <td>@post.PostContent</td>
+                        <td>@post.PostDesc</td>
                         <td>@post.Upvote</td>
                         <td>@post.Downvote</td>
                         <td>
@@ -113,7 +113,7 @@
     </div>
 
     <!-- Delete featured Pin Confirmation Modal -->
-    <div class="modal fade" id="deletefeaturedConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="deletefeaturedConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deletefeaturedConfirmationModal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <form asp-action="DeleteFeaturedGuide" asp-controller="Guide" method="post">
